# kernels

./: .gitignore
attention/: CMakeLists.txt  attention_test.cu
attention/include/: kernels.h
attention/src/: attention_v1_simple_fwd.cu  attention_v2_tensor_core_fwd.cu
layer_norm/: CMakeLists.txt  layer_norm.cu
layer_norm/include/: kernels.h  utils.h
layer_norm/src/: layer_norm_simple.cu  layer_norm_simple_async.cu  layer_norm_simple_dsmem.cu  layer_norm_simple_dsmem_async_v1.cu  layer_norm_simple_dsmem_async_v2.cu  layer_norm_simple_persistant.cu  layer_norm_wellford_async.cu
